Several Survey UI fixes.
Fixes:
Too narrow fieldsets in new question/option dialogs.
Survey submit (on take view) and save/export/etc. buttons at weird places, instead of at bottom.
Weird placement of radio buttons in Opera.
Too narrow selects in IE.
Broken images in edit view in IE and Opera.

Reviewed by: Lennard de Rijk (Only on IE)

--- a/app/soc/content/css/soc-090418-ie.css
+++ b/app/soc/content/css/soc-090418-ie.css
@@ -30,3 +30,11 @@ td.formfieldvalue select {
   width: 200px;
 }
 
+#survey_widget select,
+#survey_widget input {
+  width: auto !important;
+}
+
+#survey_widget textarea {
+  width: 95%;
+}
